enable http/2 in Apache

--- a/service/apache_indi-allsky.conf
+++ b/service/apache_indi-allsky.conf
@@ -100,16 +100,16 @@ Listen *:%HTTPS_PORT%
     Alias /indi-allsky/static %ALLSKY_DIRECTORY%/indi_allsky/flask/static
 
 
-    #Protocols h2 http/1.1
+    Protocols h2 http/1.1
 
 
     SSLEngine on
     SSLCertificateFile /etc/apache2/ssl/indi-allsky_apache.pem
     SSLCertificateKeyFile /etc/apache2/ssl/indi-allsky_apache.key
 
-    #SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
-    #SSLHonorCipherOrder     off
-    #SSLSessionTickets       off
+    SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
+    SSLHonorCipherOrder     off
+    SSLSessionTickets       off
 
     # 1 week HSTS header
     Header always set Strict-Transport-Security "max-age=604800; includeSubDomains"
