--- a/requirements/requirements_latest.txt
+++ b/requirements/requirements_latest.txt
@@ -42,7 +42,7 @@ certifi >= 2023.7.22
 # https://www.wheelodex.org/projects/cryptography/
 cryptography >= 42.0.5
 dbus-python
-paho-mqtt
+paho-mqtt >= 2.0.0
 setuptools-rust
 # https://www.wheelodex.org/projects/bcrypt/
 bcrypt
