--- a/requirements/requirements_latest_armv6l.txt
+++ b/requirements/requirements_latest_armv6l.txt
@@ -44,7 +44,7 @@ certifi >= 2023.5.7
 # segfault in newer versions
 cryptography == 37.0.4
 dbus-python
-paho-mqtt
+paho-mqtt >= 2.0.0
 setuptools-rust
 # https://www.piwheels.org/project/bcrypt/
 # segfault in newer versions
