--- a/docker/Dockerfile.capture
+++ b/docker/Dockerfile.capture
@@ -1,6 +1,6 @@
 
 # docker- prefix due to files in docker/ folder
-FROM docker-indi.allsky.base
+FROM docker_indi.allsky.base
 
 ARG DEBIAN_FRONTEND=noninteractive
 
