--- a/docker/Dockerfile.indiserver_ubuntu2204
+++ b/docker/Dockerfile.indiserver_ubuntu2204
@@ -1,6 +1,6 @@
 
 # docker- prefix due to files in docker/ folder
-FROM docker-indi.base
+FROM docker_indi.base
 
 ARG DEBIAN_FRONTEND=noninteractive
 
