add BMP180 support

--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -3,6 +3,7 @@ gpiod
 adafruit-circuitpython-dht
 adafruit-circuitpython-bme280
 adafruit-circuitpython-bme680
+circuitpython-bmp180
 
 ### Rpi5
 #rpi-lgpio
