--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -4,6 +4,7 @@ adafruit-circuitpython-dht
 adafruit-circuitpython-bme280
 adafruit-circuitpython-bme680
 circuitpython-bmp180
+adafruit-circuitpython-si7021
 
 ### Rpi5
 #rpi-lgpio
