add mlx90614 sensor support

--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -6,6 +6,7 @@ adafruit-circuitpython-bme680
 circuitpython-bmp180
 adafruit-circuitpython-si7021
 adafruit-circuitpython-sht4x
+adafruit-circuitpython-mlx90614
 
 ### Rpi5
 #rpi-lgpio
