remove adafruit ds18x20 requirement

--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -9,7 +9,9 @@ adafruit-circuitpython-sht4x
 adafruit-circuitpython-mlx90614
 adafruit-circuitpython-tsl2591
 adafruit-circuitpython-tsl2561
-adafruit-circuitpython-ds18x20
+
+### does not work on raspi
+#adafruit-circuitpython-ds18x20
 
 ### Rpi5
 #rpi-lgpio
