--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -9,6 +9,7 @@ adafruit-circuitpython-sht4x
 adafruit-circuitpython-mlx90614
 adafruit-circuitpython-tsl2591
 adafruit-circuitpython-tsl2561
+adafruit-circuitpython-bh1750
 
 ### does not work on raspi
 #adafruit-circuitpython-ds18x20
