use specific tags for libcamera and rpicam-tools with docker

--- a/docker/Dockerfile.indi_allsky_base_ubuntu2204
+++ b/docker/Dockerfile.indi_allsky_base_ubuntu2204
@@ -38,6 +38,7 @@ RUN apt-get -y install \
     gifsicle \
     jq \
     libgpiod2 \
+    i2c-tools \
     sqlite3
 
 
@@ -102,13 +103,13 @@ RUN mkdir -m 755 /var/www/html/allsky/images/export
 
 COPY requirements/requirements_latest.txt /home/allsky
 COPY requirements/requirements_optional.txt /home/allsky
+COPY requirements/requirements_gpio.txt /home/allsky
 
 RUN python3.11 -m venv /home/allsky/venv
 
 ENV VIRTUAL_ENV=/home/allsky/venv
 RUN /home/allsky/venv/bin/pip3 install --no-cache-dir --upgrade pip setuptools wheel
-RUN /home/allsky/venv/bin/pip3 install --no-cache-dir -r requirements_latest.txt
-RUN /home/allsky/venv/bin/pip3 install --no-cache-dir -r requirements_optional.txt
+RUN /home/allsky/venv/bin/pip3 install --no-cache-dir -r requirements_latest.txt -r requirements_optional.txt -r requirements_gpio.txt
 RUN /home/allsky/venv/bin/pip3 install --no-cache-dir "git+https://github.com/indilib/pyindi-client.git@674706f#egg=pyindi-client"
 
 # cleanup
