install skyfield module

--- a/requirements/requirements_latest.txt
+++ b/requirements/requirements_latest.txt
@@ -15,6 +15,7 @@ astroalign
 bottleneck
 python-dateutil
 ephem
+skyfield
 paramiko
 # https://www.wheelodex.org/projects/pycurl/ or https://www.piwheels.org/project/pycurl/
 pycurl
