--- a/requirements/requirements_latest_web.txt
+++ b/requirements/requirements_latest_web.txt
@@ -11,6 +11,7 @@ scikit-image
 Pillow
 bottleneck
 ephem
+skyfield
 # https://www.wheelodex.org/projects/pycurl/ or https://www.piwheels.org/project/pycurl/
 gunicorn[gthread] >= 22.0.0
 inotify
