--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -10,6 +10,7 @@ adafruit-circuitpython-mlx90614
 adafruit-circuitpython-tsl2591
 adafruit-circuitpython-tsl2561
 adafruit-circuitpython-bh1750
+adafruit-circuitpython-ads1x15
 
 ### does not work on raspi
 #adafruit-circuitpython-ds18x20
