--- a/requirements/requirements_latest_32_post.txt
+++ b/requirements/requirements_latest_32_post.txt
@@ -1,2 +1,4 @@
-git+https://github.com/letmaik/rawpy.git#egg=rawpy
 #rawpy  # not available on armv7l
+# v0.22.0 requires numpy 2.0
+git+https://github.com/letmaik/rawpy.git@v0.21.0#egg=rawpy
+numpy < 2.0
