--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -12,6 +12,7 @@ adafruit-circuitpython-tsl2591
 adafruit-circuitpython-tsl2561
 adafruit-circuitpython-bh1750
 adafruit-circuitpython-ads1x15
+adafruit-circuitpython-si1145
 
 ### does not work on raspi
 #adafruit-circuitpython-ds18x20
