--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -6,6 +6,7 @@ adafruit-circuitpython-bme280
 adafruit-circuitpython-bme680
 circuitpython-bmp180
 adafruit-circuitpython-si7021
+adafruit-circuitpython-sht31d
 adafruit-circuitpython-sht4x
 adafruit-circuitpython-mlx90614
 adafruit-circuitpython-tsl2591
