--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -8,6 +8,7 @@ circuitpython-bmp180
 adafruit-circuitpython-si7021
 adafruit-circuitpython-sht31d
 adafruit-circuitpython-sht4x
+adafruit-circuitpython-ahtx0
 adafruit-circuitpython-mlx90614
 adafruit-circuitpython-tsl2591
 adafruit-circuitpython-tsl2561
