disable libcamera build in docker for now

--- a/docker/Dockerfile.indi_base_debian12
+++ b/docker/Dockerfile.indi_base_debian12
@@ -59,6 +59,8 @@ WORKDIR /home/allsky
 
 
 RUN ./build_indi.sh $INDI_VERSION
-RUN ./build_libcamera.sh $LIBCAMERA_TAG $RPICAM_APPS_TAG
+
+# libcamera build is prone to failure on x86_64
+#RUN ./build_libcamera.sh $LIBCAMERA_TAG $RPICAM_APPS_TAG
 
 RUN rm -fR /home/allsky/Projects
