adding ADSB config options

--- a/service/apache_indi-allsky.conf
+++ b/service/apache_indi-allsky.conf
@@ -50,6 +50,11 @@ Listen *:%HTTPS_PORT%
 
     Alias /indi-allsky/images %IMAGE_FOLDER%
     Alias /indi-allsky/static %ALLSKY_DIRECTORY%/indi_allsky/flask/static
+
+    ### ADSB Aircraft tracking
+    #Alias /dump1090/data /run/dump1090-mutability
+    #Alias /dump1090 /usr/share/dump1090-mutability/html
+)
 </VirtualHost>
 
 
@@ -113,4 +118,8 @@ Listen *:%HTTPS_PORT%
 
     # 1 week HSTS header
     Header always set Strict-Transport-Security "max-age=604800; includeSubDomains"
+
+    ### ADSB Aircraft tracking
+    #Alias /dump1090/data /run/dump1090-mutability
+    #Alias /dump1090 /usr/share/dump1090-mutability/html
 </VirtualHost>
