--- a/requirements/requirements_latest_web.txt
+++ b/requirements/requirements_latest_web.txt
@@ -13,6 +13,7 @@ bottleneck
 ephem
 skyfield
 # https://www.wheelodex.org/projects/pycurl/ or https://www.piwheels.org/project/pycurl/
+pycurl
 gunicorn[gthread] >= 22.0.0
 inotify
 psutil
