enable dump1090 aliases by default

--- a/service/apache_indi-allsky.conf
+++ b/service/apache_indi-allsky.conf
@@ -65,8 +65,8 @@ Listen *:%HTTP_PORT%
     Header always set Strict-Transport-Security "max-age=604800; includeSubDomains"
 
     ### ADSB Aircraft tracking
-    #Alias /dump1090/data /run/dump1090-mutability
-    #Alias /dump1090 /usr/share/dump1090-mutability/html
+    Alias /dump1090/data /run/dump1090-mutability
+    Alias /dump1090 /usr/share/dump1090-mutability/html
 </VirtualHost>
 
 # HTTP vhost
@@ -121,7 +121,7 @@ Listen *:%HTTP_PORT%
     Alias /indi-allsky/static %ALLSKY_DIRECTORY%/indi_allsky/flask/static
 
     ### ADSB Aircraft tracking
-    #Alias /dump1090/data /run/dump1090-mutability
-    #Alias /dump1090 /usr/share/dump1090-mutability/html
+    Alias /dump1090/data /run/dump1090-mutability
+    Alias /dump1090 /usr/share/dump1090-mutability/html
 </VirtualHost>
 
