new ssl directive for nginx

--- a/service/nginx_indi-allsky.conf
+++ b/service/nginx_indi-allsky.conf
@@ -5,7 +5,7 @@ upstream indi_allsky_server {
 
 # HTTPS server
 server {
-    listen %HTTPS_PORT%;
+    listen %HTTPS_PORT% ssl;
 
     # not supported on debian 10
     #http2 on;
@@ -15,7 +15,6 @@ server {
     ssl_certificate           /etc/nginx/ssl/indi-allsky_nginx.pem;
     ssl_certificate_key       /etc/nginx/ssl/indi-allsky_nginx.key;
 
-    ssl on;
     ssl_session_cache  builtin:1000  shared:SSL:10m;
     ssl_protocols  TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
