--- a/docker/Dockerfile.gunicorn
+++ b/docker/Dockerfile.gunicorn
@@ -26,11 +26,15 @@ RUN apt-get update \
 RUN groupadd --gid 10001 allsky \
     && useradd --create-home --no-user-group --uid 10001 --gid allsky --home-dir /home/allsky --shell /bin/bash allsky
 
+RUN echo "allsky ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/allsky
+RUN chmod 0440 /etc/sudoers.d/allsky
+
 USER allsky
 WORKDIR /home/allsky
 
 COPY requirements/requirements_latest_web.txt /home/allsky
 COPY requirements/requirements_optional.txt /home/allsky
+#COPY requirements/requirements_gpio.txt /home/allsky
 
 USER root
 RUN apt-get update \
