switch back to using virtualenvs

--- a/docker/Dockerfile.capture
+++ b/docker/Dockerfile.capture
@@ -1,4 +1,4 @@
-FROM python:3.11-slim
+FROM docker-indi.base
 
 ARG DEBIAN_FRONTEND=noninteractive
 
@@ -9,16 +9,8 @@ RUN apt-get update \
     && apt-get -y install \
       --no-install-recommends \
       --no-install-suggests \
-      iputils-ping \
-      iproute2 \
-      bind9-host \
-      locales \
-      tzdata \
-      procps \
-      netcat-traditional \
-      sudo \
-      git \
-      jq \
+      python3-venv \
+      virtualenv \
       ffmpeg \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
@@ -35,18 +27,11 @@ RUN if [ $TARGETARCH == "amd64" ]; then \
         && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* ; \
     fi
 
-RUN groupadd --gid 10001 allsky \
-    && useradd --create-home --no-user-group --uid 10001 --gid allsky --home-dir /home/allsky --shell /bin/bash allsky
-
-RUN echo "allsky ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/allsky
-RUN chmod 0440 /etc/sudoers.d/allsky
-
-USER allsky
-WORKDIR /home/allsky
 
 COPY requirements/requirements_latest.txt /home/allsky
 COPY requirements/requirements_optional.txt /home/allsky
 #COPY requirements/requirements_gpio.txt /home/allsky
+
 
 USER root
 RUN apt-get update \
@@ -66,14 +51,26 @@ RUN apt-get update \
         libnova-dev \
         python3-dev \
         dbus-daemon \
-        swig \
-        libindi-dev \
-        libindiclient1 \
-    && export CC=clang \
+        swig
+
+
+USER allsky
+WORKDIR /home/allsky
+
+
+RUN python3 -m venv /home/allsky/venv
+ENV VIRTUAL_ENV=/home/allsky/venv
+
+
+RUN export CC=clang \
     && export CXX=clang++ \
-    && pip install --no-cache-dir -r requirements_latest.txt -r requirements_optional.txt \
-    && pip install --no-cache-dir "git+https://github.com/indilib/pyindi-client.git@6f8fa80#egg=pyindi-client" \
-    && apt-get remove --purge -y \
+    && /home/allsky/venv/bin/pip3 install --no-cache-dir --upgrade pip setuptools wheel packaging \
+    && /home/allsky/venv/bin/pip3 install --no-cache-dir -r requirements_latest.txt -r requirements_optional.txt \
+    && /home/allsky/venv/bin/pip3 install --no-cache-dir "git+https://github.com/indilib/pyindi-client.git@6f8fa80#egg=pyindi-client"
+
+
+USER root
+RUN apt-get remove --purge -y \
         clang \
         cmake \
         build-essential \
@@ -81,14 +78,13 @@ RUN apt-get update \
         libdbus-1-dev \
         libglib2.0-dev \
         libcfitsio-dev \
-        libnova-dev \
         python3-dev \
         dbus-daemon \
         swig \
-        libindi-dev \
     && apt-get autoremove --purge -y \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && chown -R allsky:allsky /home/allsky
+
 
 # redirect /dev/log to /dev/null
 RUN ln -s /dev/null /dev/log
