--- a/docker/Dockerfile.gunicorn
+++ b/docker/Dockerfile.gunicorn
@@ -21,6 +21,8 @@ RUN apt-get update \
       sudo \
       git \
       jq \
+      python3-venv \
+      virtualenv \
     && apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 RUN groupadd --gid 10001 allsky \
@@ -29,12 +31,11 @@ RUN groupadd --gid 10001 allsky \
 RUN echo "allsky ALL=(ALL) NOPASSWD:ALL" > /etc/sudoers.d/allsky
 RUN chmod 0440 /etc/sudoers.d/allsky
 
-USER allsky
-WORKDIR /home/allsky
 
 COPY requirements/requirements_latest_web.txt /home/allsky
 COPY requirements/requirements_optional.txt /home/allsky
 #COPY requirements/requirements_gpio.txt /home/allsky
+
 
 USER root
 RUN apt-get update \
@@ -49,11 +50,25 @@ RUN apt-get update \
         libdbus-1-3 \
         libglib2.0-dev\
         libglib2.0-0 \
-        dbus-daemon \
-    && export CC=clang \
+        dbus-daemon
+
+
+USER allsky
+WORKDIR /home/allsky
+
+
+RUN python3 -m venv /home/allsky/venv
+ENV VIRTUAL_ENV=/home/allsky/venv
+
+
+RUN export CC=clang \
     && export CXX=clang++ \
-    && pip install --no-cache-dir -r requirements_latest_web.txt -r requirements_optional.txt \
-    && apt-get remove --purge -y \
+    && /home/allsky/venv/bin/pip3 install --no-cache-dir --upgrade pip setuptools wheel packaging \
+    && /home/allsky/venv/bin/pip3 install --no-cache-dir -r requirements_latest_web.txt -r requirements_optional.txt
+
+
+USER root
+RUN apt-get remove --purge -y \
         clang \
         cmake \
         build-essential \
