--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -56,6 +56,7 @@ services:
       dockerfile: docker/Dockerfile.capture
     env_file: .env
     depends_on:
+      - indi.base
       - mariadb.indi.allsky
       - indiserver.indi.allsky
     #privileged: true  # enable for libcamera
