--- a/docker/Dockerfile.indiserver_debian12
+++ b/docker/Dockerfile.indiserver_debian12
@@ -21,8 +21,18 @@ RUN chown allsky:allsky /home/allsky/start_indiserver.sh
 RUN chmod 755 /home/allsky/start_indiserver.sh
 
 
+COPY --chown=allsky:allsky misc/build_indi.sh /home/allsky
+RUN chmod 755 /home/allsky/build_indi.sh
+
 USER allsky
 WORKDIR /home/allsky
+
+
+ENV BUILD_INDI_CORE=false
+ENV BUILD_INDI_3RDPARTY=true
+RUN bash build_indi.sh $INDI_VERSION \
+    && rm -fR /home/allsky/Projects \
+    && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 
 ENTRYPOINT ["./start_indiserver.sh"]
