--- a/requirements/requirements_latest_32.txt
+++ b/requirements/requirements_latest_32.txt
@@ -3,7 +3,7 @@
 astropy >= 6.1.0
 pyerfa >= 2.0.1.4
 # https://www.wheelodex.org/projects/numpy/
-numpy >= 2.0
+numpy >= 2.1.0
 # https://www.wheelodex.org/projects/opencv-python-headless/
 opencv-python-headless >= 4.10.0.84
 # https://www.wheelodex.org/projects/scipy/
@@ -51,7 +51,7 @@ bcrypt
 passlib[argon2] >= 1.7.4
 prettytable
 lxml
-shapely
+shapely >= 2.0.6
 requests-toolbelt
 fish2pano >= 0.4.1
 pytz
