--- a/requirements/requirements_debian11_web.txt
+++ b/requirements/requirements_debian11_web.txt
@@ -2,11 +2,11 @@
 # https://www.wheelodex.org/projects/numpy/
 numpy >= 1.22.2, < 2.0
 # https://www.wheelodex.org/projects/opencv-python-headless/
-opencv-python-headless >= 4.8.1.78
+opencv-python-headless >= 4.8.1.78, <= 4.11.0.86
 # https://www.wheelodex.org/projects/ccdproc/
 ccdproc
 # https://www.wheelodex.org/projects/scikit-image/
-scikit-image
+scikit-image <= 0.19.3
 # https://www.wheelodex.org/projects/Pillow/
 Pillow
 bottleneck
@@ -26,7 +26,7 @@ werkzeug
 is-safe-url
 certifi >= 2023.7.22
 # https://www.wheelodex.org/projects/cryptography/
-cryptography >= 42.0.5
+cryptography >= 42.0.8
 dbus-python
 setuptools-rust
 # https://www.wheelodex.org/projects/bcrypt/
