--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -18,6 +18,8 @@ adafruit-circuitpython-bh1750
 adafruit-circuitpython-ads1x15
 adafruit-circuitpython-si1145
 adafruit-circuitpython-ltr390
+adafruit-circuitpython-htu21d
+adafruit-circuitpython-htu31d
 
 ### does not work on raspi
 #adafruit-circuitpython-ds18x20
