--- a/docker/Dockerfile.indiserver_debian12
+++ b/docker/Dockerfile.indiserver_debian12
@@ -30,6 +30,7 @@ WORKDIR /home/allsky
 
 ENV BUILD_INDI_CORE=false
 ENV BUILD_INDI_3RDPARTY=true
+ENV BUILD_INDI_CAMERA_VENDOR=all
 RUN bash build_indi.sh $INDI_VERSION \
     && rm -fR /home/allsky/Projects \
     && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
