--- a/service/nginx_indi-allsky.conf
+++ b/service/nginx_indi-allsky.conf
@@ -7,7 +7,7 @@ upstream indi_allsky_server {
 server {
     listen %HTTPS_PORT% ssl;
 
-    # not supported on debian 10
+    ### not supported on debian 10
     #http2 on;
 
     root %DOCROOT_FOLDER%;
@@ -20,7 +20,7 @@ server {
     ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
     ssl_prefer_server_ciphers on;
 
-    # 1 week HSTS header
+    ### 1 week HSTS header
     add_header Strict-Transport-Security "max-age=604800; includeSubDomains" always;
 
     rewrite ^/$ https://$host:%HTTPS_PORT%/indi-allsky;
