add INDI_VERSION arg to indiserver dockerfile

--- a/docker/Dockerfile.indi_base_debian12
+++ b/docker/Dockerfile.indi_base_debian12
@@ -48,3 +48,6 @@ ENV BUILD_INDI_OS_PACKAGE_UPGRADE=false
 RUN bash build_indi.sh $INDI_VERSION \
     && rm -fR /home/allsky/Projects \
     && sudo apt-get clean && sudo rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+### libcamera build is prone to failure
+#RUN ./build_libcamera.sh $LIBCAMERA_TAG $RPICAM_APPS_TAG
