--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -29,6 +29,8 @@ services:
       context: ..
       dockerfile: docker/Dockerfile.indiserver_debian12
       #dockerfile: docker/Dockerfile.indiserver_ubuntu2204
+      args:
+        - INDI_VERSION=${INDIALLSKY_INDI_VERSION}
     env_file: .env
     depends_on:
       - indi.base
