add new camera vendor option to dockerfile

--- a/docker/Dockerfile.indiserver_debian12
+++ b/docker/Dockerfile.indiserver_debian12
@@ -3,6 +3,7 @@
 FROM docker-indi.base
 
 ARG INDI_VERSION
+ARG INDI_CAMERA_VENDOR
 ARG DEBIAN_FRONTEND=noninteractive
 
 USER root
@@ -31,7 +32,7 @@ WORKDIR /home/allsky
 
 ENV BUILD_INDI_CORE=false
 ENV BUILD_INDI_3RDPARTY=true
-ENV BUILD_INDI_CAMERA_VENDOR=supported
+ENV BUILD_INDI_CAMERA_VENDOR=$INDI_CAMERA_VENDOR
 ENV BUILD_INDI_OS_PACKAGE_UPGRADE=false
 RUN bash build_indi.sh $INDI_VERSION \
     && rm -fR /home/allsky/Projects \
