add HDC302x module to requirements

--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -22,6 +22,7 @@ adafruit-circuitpython-htu21d
 adafruit-circuitpython-htu31d
 adafruit-circuitpython-scd30
 adafruit-circuitpython-scd4x
+adafruit-circuitpython-hdc302x
 
 ### does not work on raspi
 #adafruit-circuitpython-ds18x20
