--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -23,6 +23,7 @@ adafruit-circuitpython-htu31d
 adafruit-circuitpython-scd30
 adafruit-circuitpython-scd4x
 adafruit-circuitpython-hdc302x
+adafruit-circuitpython-bmp3xx
 
 ### does not work on raspi
 #adafruit-circuitpython-ds18x20
