update web server configs with lets encrypt examples

--- a/service/apache_indi-allsky.conf
+++ b/service/apache_indi-allsky.conf
@@ -1,5 +1,7 @@
-Listen *:%HTTPS_PORT%
-Listen *:%HTTP_PORT%
+#Listen *:%HTTPS_PORT%
+#Listen *:%HTTP_PORT%
+Listen [::]:%HTTPS_PORT%
+Listen [::]:%HTTP_PORT%
 
 
 # HTTPS vhost
@@ -54,15 +56,22 @@ Listen *:%HTTP_PORT%
 
 
     SSLEngine on
+
+    #SSLCACertificatePath /etc/ssl/certs/ca-certificates.crt
     SSLCertificateFile /etc/apache2/ssl/indi-allsky_apache.pem
     SSLCertificateKeyFile /etc/apache2/ssl/indi-allsky_apache.key
+
+    ### Lets Encrypt config
+    #ServerName example.org
+    #SSLCertificateFile /etc/letsencrypt/live/example.org/fullchain.pem
+    #SSLCertificateKeyFile /etc/letsencrypt/live/example.org/privkey.pem
 
     SSLProtocol all -SSLv3 -TLSv1 -TLSv1.1
     SSLHonorCipherOrder     off
     SSLSessionTickets       off
 
     ### 1 week HSTS header
-    Header always set Strict-Transport-Security "max-age=604800; includeSubDomains"
+    #Header always set Strict-Transport-Security "max-age=604800; includeSubDomains"
 
     ### ADSB Aircraft tracking
     Alias /dump1090/data /run/dump1090-mutability
@@ -76,7 +85,8 @@ Listen *:%HTTP_PORT%
     ### Comment this section to permit HTTP access to indi-allsky
     ###  SESSION_COOKIE_SECURE will have to be set to "false" in flash config
     RewriteCond "%{HTTPS}" off
-    RewriteRule "^/(.*)" "https://%{SERVER_NAME}:%HTTPS_PORT%/$1" [R,L]
+    RewriteCond %{REQUEST_URI} !^/\.well\-known
+    RewriteRule "^/(.*)" "https://%{SERVER_NAME}:%HTTPS_PORT%/$1" [R=302,L]
     ###
 
     RewriteRule "^/$" "/indi-allsky/" [R]
