--- a/service/nginx_indi-allsky.conf
+++ b/service/nginx_indi-allsky.conf
@@ -5,15 +5,21 @@ upstream indi_allsky_server {
 
 # HTTPS server
 server {
-    listen %HTTPS_PORT% ssl;
+    #listen %HTTPS_PORT% ssl;
+    listen [::]:%HTTPS_PORT% ssl ipv6only=off;
 
     ### not supported on debian 10
-    #http2 on;
+    http2 on;
 
     root %DOCROOT_FOLDER%;
 
-    ssl_certificate           /etc/nginx/ssl/indi-allsky_nginx.pem;
-    ssl_certificate_key       /etc/nginx/ssl/indi-allsky_nginx.key;
+    ssl_certificate /etc/nginx/ssl/indi-allsky_nginx.pem;
+    ssl_certificate_key /etc/nginx/ssl/indi-allsky_nginx.key;
+
+    ### Lets Encrypt config
+    #server_name example.org;
+    #ssl_certificate /etc/letsencrypt/live/example.org/fullchain.pem;
+    #ssl_certificate_key /etc/letsencrypt/live/example.org/privkey.pem;
 
     ssl_session_cache  builtin:1000  shared:SSL:10m;
     ssl_protocols  TLSv1.2 TLSv1.3;
@@ -21,7 +27,7 @@ server {
     ssl_prefer_server_ciphers on;
 
     ### 1 week HSTS header
-    add_header Strict-Transport-Security "max-age=604800; includeSubDomains" always;
+    #add_header Strict-Transport-Security "max-age=604800; includeSubDomains" always;
 
     rewrite ^/$ https://$host:%HTTPS_PORT%/indi-allsky;
 
@@ -82,13 +88,23 @@ server {
 
 # HTTP server
 server {
-    listen %HTTP_PORT%;
+    #listen %HTTP_PORT%;
+    listen [::]:%HTTP_PORT% ipv6only=off;
 
     root %DOCROOT_FOLDER%;
 
+    ### allow Lets Encrypt challenges without redirecting
+    location /.well-known {
+        autoindex off;
+        allow all;
+        try_files $uri =404;
+    }
+
     ### Comment this section to permit HTTP access to indi-allsky
     ###  SESSION_COOKIE_SECURE will have to be set to "false" in flash config
-    return 302 https://$host:%HTTPS_PORT%$request_uri;
+    location / {
+        return 302 https://$host:%HTTPS_PORT%$request_uri;
+    }
     ###
 
     rewrite ^/$ /indi-allsky;
