setup ipv6 listeners in web server

--- a/docker/apache.local.conf
+++ b/docker/apache.local.conf
@@ -49,8 +49,8 @@ ServerRoot "/usr/local/apache2"
 # prevent Apache from glomming onto all bound IP addresses.
 #
 #Listen 12.34.56.78:80
-Listen *:80
-Listen *:443
+Listen [::]:80
+Listen [::]:443
 
 
 #
@@ -619,7 +619,7 @@ SSLRandomSeed connect builtin
     SSLHonorCipherOrder     off
     SSLSessionTickets       off
 
-    # 1 week HSTS header
-    Header always set Strict-Transport-Security "max-age=604800; includeSubDomains"
+    ### 1 week HSTS header
+    #Header always set Strict-Transport-Security "max-age=604800; includeSubDomains"
 </VirtualHost>
 
