--- a/docker/nginx.local.conf
+++ b/docker/nginx.local.conf
@@ -3,12 +3,12 @@ upstream indi_allsky_server {
 }
 
 server {
-    listen 80;
+    listen [::]:80 ipv6only=off;
     return 302 https://$host:8443$request_uri;
 }
 
 server {
-    listen 443 ssl;
+    listen [::]:443 ssl ipv6only=off;
 
     http2 on;
 
@@ -24,8 +24,8 @@ server {
     ssl_protocols TLSv1.3;
     ssl_prefer_server_ciphers on;
 
-    # 1 week HSTS header
-    add_header Strict-Transport-Security "max-age=604800; includeSubDomains" always;
+    ### 1 week HSTS header
+    #add_header Strict-Transport-Security "max-age=604800; includeSubDomains" always;
 
     rewrite ^/$ https://$host:8443/indi-allsky;
 
