--- a/requirements/requirements_gpio.txt
+++ b/requirements/requirements_gpio.txt
@@ -25,6 +25,7 @@ adafruit-circuitpython-scd4x
 adafruit-circuitpython-hdc302x
 adafruit-circuitpython-bmp3xx
 adafruit-circuitpython-ina3221
+adafruit-circuitpython-ina219
 sparkfun-qwiic-mmc5983ma
 
 ### does not work on raspi
